New Ant tasks to start/stop Tomcat